--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,13 @@
   -webkit-text-size-adjust: 100%;
 }
 
+img {
+  height: 100px;
+  width: auto;
+  border-color: black;
+  border: 5px solid;
+}
+
 a {
   font-weight: 500;
   color: #646cff;
@@ -66,4 +73,42 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+}
+
+section{
+  display: flex;
+}
+/* body{
+  background-color: rgb(66, 91, 67);
+} */
+h2{
+  color: rgb(0, 0, 0);
+  /* text-transform: capitalize; */
+  /* text-align: center; */
+  margin-left:20px;
+  margin-top: 4%;
+  margin-bottom: 3%;
+  font-size: small;
+}
+h1{
+  padding:30px;
+  color: rgb(0, 0, 0);
+  text-transform: capitalize;
+  text-align: center;
+}
+p{
+  color: rgb(0, 0, 0);
+  text-transform: capitalize;
+  /* text-align: center; */
+  margin-left:20px;
+  margin-top: 2%;
+  margin-bottom: 1%;
+}
+div{
+  
+}
+button{
+  margin-left:20px;
+  margin-top: 3%;
+  margin-bottom: 10%;
 }
